# rusty-coin

./: README.md  main.py  pyproject.toml
docs/: factorial.rs
docs/poisson/: poisson.c  poisson.rs
engine/: Cargo.toml
engine/src/: lib.rs
